# module-toolkit

./: .env.example  .gitignore  CLAUDE.md  GENEPATTERN_MODULE_SPEC.md  PRESENTATION.md  README.md  create_CalculateContamination.sh  create_getpileupsummaries.sh  gaudi.Dockerfile  generate-module.py  pyproject.toml  pytest.ini  requirements.txt
agents/: config.py  effects.py  effects_models.py  models.py  module.py  planner.py  researcher.py  status.py  validator.py
app/: README.md  manage.py  requirements.txt
app/generator/: urls.py  views.py
dockerfile/: agent.py  linter.py  runtime.py
dockerfile/tests/: test_build_validation.py  test_runtime_validation.py
documentation/: agent.py
gpunit/: agent.py
manifest/: agent.py  models.py
paramgroups/: agent.py
skills/gp-module/: GENEPATTERN_MODULE_SPEC.md  SKILL.md  gp-manifest.md
skills/gp-wrapper/: SKILL.md
temporal/: CONSIDERATIONS.md  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.5.md  PHASE3.md  PHASE4.md  PHASE5.md  PLAN.md  _test_fixtures.py  activities.py  agents.py  client.py  logger.py  worker.py  workflow.py
tests/: conftest.py  test_artifact_agents.py  test_brave_rate_limiter.py  test_client_state.py  test_effects.py  test_error_classifier.py  test_guard_single_call.py  test_module_orchestrator.py  test_planner_agent.py  test_researcher_agent.py  test_telemetry_config.py  test_temporal_agents.py  test_websearch_live.py  test_workflow.py  test_workflow_progress.py
training/manifests/: manifest_dataset.jsonl
training/planner/: build_research_prompts.py  (+1 more)
wrapper/: agent.py  parser.py
(+987 files in other folders)
